laying the foundation

--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/React/style.css" />
+    <link rel="stylesheet" href="/style.css" />
     <title>React</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <h1 id="root">Not Rendered!</h1>
+    </div>
+
     <!-- <script>
       const heading = document.createElement("h1");
       heading.innerHTML = "Hello world from javascript";
@@ -16,15 +19,7 @@
       root.appendChild(heading);
     </script> -->
 
-    <script
-      crossorigin
-      src="https://unpkg.com/react@18/umd/react.development.js"
-    ></script>
-    <script
-      crossorigin
-      src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
-    ></script>
-
-    <script src="/React/App.js"></script>
+    <script type="module" src="./App.js"></script>
+    <!--  type = "module" => for import ans export keyword support-->
   </body>
 </html>
