re-structure to our app

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       root.appendChild(heading);
     </script> -->
 
-    <script type="module" src="./App.js"></script>
+    <script type="module" src="./src/App.js"></script>
     <!--  type = "module" => for import ans export keyword support-->
   </body>
 </html>
